# libosmtools

./: AreaExtractor.cpp  AreaExtractorFilters.cpp  CMakeLists.txt  types.cpp
include/osmtools/: AreaExtractor.h  AreaExtractorFilters.h  CellCriteria.h  MeshCriteria.h  OsmGridRegionTree.h  OsmTriangulationRegionStore.h  TriangulationGridLocater.h  types.h
src/: AreaExtractor.cpp  AreaExtractorFilters.cpp  CellCriteria.cpp  OsmGridRegionTree.cpp  OsmTriangulationRegionStore.cpp
